# llm-eval-framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: evaluation.yml
benchmarks/: rag_benchmark.jsonl
examples/: config.yaml  config_ci.yaml
examples/model_outputs/: model_a_outputs.jsonl
src/llm_eval/: __init__.py  version.py
src/llm_eval/cli/: __init__.py  main.py
src/llm_eval/config/: loader.py  schema.py
src/llm_eval/data/: dataset_loader.py  validators.py
src/llm_eval/evaluation/: aggregator.py  quality_gates.py  runner.py
src/llm_eval/llm_providers/: anthropic_provider.py  base.py  openai_provider.py
src/llm_eval/metrics/: __init__.py  base.py  registry.py
src/llm_eval/metrics/judge/: llm_judge.py  prompt_templates.py  retry.py
src/llm_eval/metrics/rag/: answer_relevancy.py  context_relevancy.py  faithfulness.py
src/llm_eval/metrics/reference/: bertscore.py  bleu.py  rouge_l.py
src/llm_eval/reporting/: json_report.py  markdown_report.py
src/llm_eval/reporting/templates/: report.md.j2
src/llm_eval/visualization/: histograms.py  radar.py
tests/unit/: test_answer_relevancy.py  test_bertscore.py  test_bleu.py  test_context_relevancy.py  test_faithfulness.py  test_llm_judge.py  test_rouge_l.py
tests/unit/integration/: test_cli_run.py
